--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,13 @@
 {erl_opts, [debug_info]}.
+
+{profiles,
+    [
+        {test, [
+            {erl_opts, [{d, 'TEST', true}]}
+        ]}
+    ]
+}.
+
 {deps, []}.
 
 {shell, [
